syntax = "proto3";

option go_package = "sportshot/proto/event";

package event;

service EventService {
  rpc SearchEvents  (SearchEventsRequest) returns (EventsReply) {}
}

message SearchEventsRequest {
  string name = 1;
  string type = 2;
  string date = 3;
}

message EventInfo {
  string leagueName = 1;
  string raceTime = 2;
  string homeName = 3;
  string score = 4;
  string awayName = 5;
  string homeOdds = 6;
  string awayOdds = 7;
  int64 timestamp = 8;
}

message EventsReply {
  repeated EventInfo eventInfo = 1;
  string message = 2;
  int32 status = 3;
}
